# autoral

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
main/config/: app_config.h  credentials.c  credentials.h
main/connectivity/: ble_mesh_manager.c  ble_mesh_manager.h  mqtt_manager.c  mqtt_manager.h  wifi_manager.c  wifi_manager.h
main/control/: engine.c  engine.h  engine_types.h  gpio_control.c  gpio_control.h
main/system/: app_task.c  app_task.h  system_init.c  system_init.h
main/utils/: app_logging.c  app_logging.h  nvs_utils.c  nvs_utils.h
